cabal-version: 2.2
name:          cabal-dev-scripts
version:       0
synopsis:      Dev scripts for cabal development
description:   This package provides a tools for Cabal development
homepage:      http://www.haskell.org/cabal/
license:       BSD-3-Clause
license-file:  LICENSE
author:        Cabal Development Team <cabal-devel@haskell.org>
category:      Distribution
build-type:    Simple

executable gen-spdx
  default-language: Haskell2010
  main-is:          GenSPDX.hs
  other-modules:    GenUtils
  hs-source-dirs:   src
  ghc-options:      -Wall
  build-depends:
    , aeson                 ^>=1.4.1.0 || ^>=1.5.2.0 || ^>=2.2.1.0
    , base                  >=4.11     && <4.20
    , bytestring
    , containers
    , Diff                  ^>=0.4
    , lens                  ^>=4.18.1 || ^>=4.19.1 || ^>=5.0.1 || ^>=5.2
    , optparse-applicative  ^>=0.15.1.0 || ^>=0.16.0.0
    , text
    , zinza                 ^>=0.2

executable gen-spdx-exc
  default-language: Haskell2010
  main-is:          GenSPDXExc.hs
  other-modules:    GenUtils
  hs-source-dirs:   src
  ghc-options:      -Wall
  build-depends:
    , aeson                 ^>=1.4.1.0 || ^>=1.5.2.0 || ^>=2.2.1.0
    , base                  >=4.11     && <4.20
    , bytestring
    , containers
    , Diff                  ^>=0.4
    , lens                  ^>=4.18.1 || ^>=4.19.1 || ^>=5.0.1 || ^>=5.2
    , optparse-applicative  ^>=0.15.1.0 || ^>=0.16.0.0
    , text
    , zinza                 ^>=0.2

executable gen-validate-dockerfile
  default-language: Haskell2010
  main-is:          GenValidateDockerfile.hs
  hs-source-dirs:   src
  ghc-options:      -Wall
  build-depends:
    , base
    , bytestring
    , containers
    , HsYAML      ^>=0.2.1.0
    , zinza       ^>=0.2

executable gen-cabal-macros
  default-language: Haskell2010
  main-is:          GenCabalMacros.hs
  other-modules:    Capture
  hs-source-dirs:   src
  ghc-options:      -Wall
  build-depends:
    , base
    , bytestring
    , Cabal
    , syb               ^>=0.7.1
    , template-haskell
    , zinza             ^>=0.2

executable gen-paths-module
  default-language: Haskell2010
  main-is:          GenPathsModule.hs
  other-modules:    Capture
  hs-source-dirs:   src
  ghc-options:      -Wall
  build-depends:
    , base
    , bytestring
    , Cabal
    , syb               ^>=0.7.1
    , template-haskell
    , zinza             ^>=0.2

executable gen-cabal-install-cabal
  default-language: Haskell2010
  main-is:          GenCabalInstallCabal.hs
  hs-source-dirs:   src
  ghc-options:      -Wall
  build-depends:
    , base
    , bytestring
    , Cabal
    , zinza             ^>=0.2

executable analyse-imports
  default-language: Haskell2010
  main-is:          AnalyseImports.hs
  hs-source-dirs:   src
  ghc-options:      -Wall
  build-depends:
    , base
    , containers
    , regex-applicative
    , haskell-lexer  ^>=1.1
