name:                cabal-install-lib
version:             1.23.0.0
synopsis:            Cabal-install client utility library
description:         Various utilities needed by cabal-install
homepage:            http://www.haskell.org/cabal/
bug-reports:         https://github.com/haskell/cabal/issues
license:             BSD3
license-file:        LICENSE
author:              Lemmih <lemmih@gmail.com>
                     Paolo Martini <paolo@nemail.it>
                     Bjorn Bringert <bjorn@bringert.net>
                     Isaac Potoczny-Jones <ijones@syntaxpolice.org>
                     Duncan Coutts <duncan@community.haskell.org>
maintainer:          FIXME
copyright:           2005 Lemmih <lemmih@gmail.com>
                     2006 Paolo Martini <paolo@nemail.it>
                     2007 Bjorn Bringert <bjorn@bringert.net>
                     2007 Isaac Potoczny-Jones <ijones@syntaxpolice.org>
                     2007-2012 Duncan Coutts <duncan@community.haskell.org>
category:            Distribution
build-type:          Simple
cabal-version:       >=1.10

Flag old-directory
  description:  Use directory < 1.2 and old-time
  default:      False

Flag network-uri
  description:  Get Network.URI from the network-uri package
  default:      True

library
  ghc-options:         -Wall -fwarn-tabs
  exposed-modules:     Distribution.Client.Utils,
                       Distribution.Client.Utils.LabeledGraph
                       Distribution.Client.Compat.FilePerms,
                       Distribution.Client.Compat.Time,
                       Distribution.Client.ComponentDeps,
                       Distribution.Client.PackageIndex,
                       Distribution.Client.PackageUtils,
                       Distribution.Client.Types

  other-extensions:    ScopedTypeVariables
  default-language:    Haskell2010

  -- NOTE: when updating build-depends, don't forget to update version regexps
  -- in bootstrap.sh.
  build-depends:       array               >= 0.1      && < 0.6,
                       base                >= 4.3      && < 5,
                       bytestring          >= 0.9      && < 1,
                       Cabal               >= 1.22     && < 1.24,
                       containers          >= 0.1      && < 0.6,
                       filepath            >= 1.0      && < 1.5,
                       time                >= 1.1      && < 1.6

  if flag(old-directory)
    build-depends:     directory >= 1 && < 1.2,
                       old-time >= 1 && < 1.2,
                       process   >= 1.0.1.1  && < 1.1.0.2
  else
    build-depends:     directory >= 1.2 && < 1.3,
                       process   >= 1.1.0.2  && < 1.3

  if flag(network-uri)
    build-depends: network-uri >= 2.6, network >= 2.6
  else
    build-depends: network-uri < 2.6, network < 2.6

  if os(windows)
    build-depends: Win32 >= 2 && < 3
    cpp-options: -DWIN32
  else
    build-depends: unix >= 2.0 && < 2.8
