name:                cabal-install-solver
version:             1.23.0.0
synopsis:            Dependency solvers for cabal-install
description:         Dependency solvers for cabal-install
homepage:            http://www.haskell.org/cabal/
license:             BSD3
license-file:        LICENSE
author:              Lemmih <lemmih@gmail.com>
                     Paolo Martini <paolo@nemail.it>
                     Bjorn Bringert <bjorn@bringert.net>
                     Isaac Potoczny-Jones <ijones@syntaxpolice.org>
                     Duncan Coutts <duncan@community.haskell.org>
maintainer:          cabal-devel@haskell.org
copyright:           2005 Lemmih <lemmih@gmail.com>
                     2006 Paolo Martini <paolo@nemail.it>
                     2007 Bjorn Bringert <bjorn@bringert.net>
                     2007 Isaac Potoczny-Jones <ijones@syntaxpolice.org>
                     2007-2012 Duncan Coutts <duncan@community.haskell.org>
category:            Distribution
build-type:          Simple
cabal-version:       >=1.10

library
  ghc-options:         -Wall -fwarn-tabs
  exposed-modules:     Distribution.Client.Dependency.Types,
                       Distribution.Client.Dependency.TopDown,
                       Distribution.Client.Dependency.Modular

  other-modules:       Distribution.Client.Dependency.TopDown.Types,
                       Distribution.Client.Dependency.TopDown.Constraints,
                       Distribution.Client.Dependency.Modular.IndexConversion,
                       Distribution.Client.Dependency.Modular.Configured,
                       Distribution.Client.Dependency.Modular.Builder,
                       Distribution.Client.Dependency.Modular.Dependency,
                       Distribution.Client.Dependency.Modular.Solver,
                       Distribution.Client.Dependency.Modular.Explore,
                       Distribution.Client.Dependency.Modular.Assignment,
                       Distribution.Client.Dependency.Modular.Flag,
                       Distribution.Client.Dependency.Modular.Version,
                       Distribution.Client.Dependency.Modular.Tree,
                       Distribution.Client.Dependency.Modular.Linking,
                       Distribution.Client.Dependency.Modular.ConfiguredConversion,
                       Distribution.Client.Dependency.Modular.PSQ,
                       Distribution.Client.Dependency.Modular.Message,
                       Distribution.Client.Dependency.Modular.Log,
                       Distribution.Client.Dependency.Modular.Package,
                       Distribution.Client.Dependency.Modular.Index,
                       Distribution.Client.Dependency.Modular.Preference,
                       Distribution.Client.Dependency.Modular.Validate

  -- NOTE: when updating build-depends, don't forget to update version regexps
  -- in bootstrap.sh.
  build-depends:       base                >= 4.3     && <5,
                       Cabal               >= 1.22    && <1.24,
                       cabal-install-lib   >= 1.22    && <1.24,
                       pretty              >= 1.1     && <1.2,
                       containers          >= 0.5     && <0.6,
                       array               >= 0.5     && <0.6,
                       mtl                 >= 2.2     && <2.3

  default-language:    Haskell2010
  other-extensions:    CPP, DeriveFunctor, RecordWildCards, DeriveFoldable, DeriveTraversable, GeneralizedNewtypeDeriving
