Name:               cabal-install
Version:            1.23.0.0
Synopsis:           The command-line interface for Cabal and Hackage.
Description:
    The \'cabal\' command-line program simplifies the process of managing
    Haskell software by automating the fetching, configuration, compilation
    and installation of Haskell libraries and programs.
homepage:           http://www.haskell.org/cabal/
bug-reports:        https://github.com/haskell/cabal/issues
License:            BSD3
License-File:       LICENSE
Author:             Lemmih <lemmih@gmail.com>
                    Paolo Martini <paolo@nemail.it>
                    Bjorn Bringert <bjorn@bringert.net>
                    Isaac Potoczny-Jones <ijones@syntaxpolice.org>
                    Duncan Coutts <duncan@community.haskell.org>
Maintainer:         cabal-devel@haskell.org
Copyright:          2005 Lemmih <lemmih@gmail.com>
                    2006 Paolo Martini <paolo@nemail.it>
                    2007 Bjorn Bringert <bjorn@bringert.net>
                    2007 Isaac Potoczny-Jones <ijones@syntaxpolice.org>
                    2007-2012 Duncan Coutts <duncan@community.haskell.org>
Category:           Distribution
Build-type:         Simple
Cabal-Version:      >= 1.10
Extra-Source-Files:
  README.md bash-completion/cabal bootstrap.sh changelog

  -- Generated with '../Cabal/misc/gen-extra-source-files.sh | sort'
  tests/PackageTests/Freeze/my.cabal

source-repository head
  type:     git
  location: https://github.com/haskell/cabal/
  subdir:   cabal-install

Flag old-directory
  description:  Use directory < 1.2 and old-time
  default:      False

Flag network-uri
  description:  Get Network.URI from the network-uri package
  default:      True

executable cabal
    main-is:        Main.hs
    ghc-options:    -Wall -fwarn-tabs
    other-modules:
        Distribution.Client.BuildReports.Anonymous
        Distribution.Client.BuildReports.Storage
        Distribution.Client.BuildReports.Types
        Distribution.Client.BuildReports.Upload
        Distribution.Client.Check
        Distribution.Client.ComponentDeps
        Distribution.Client.Config
        Distribution.Client.Configure
        Distribution.Client.Dependency
        Distribution.Client.Dependency.TopDown
        Distribution.Client.Dependency.TopDown.Constraints
        Distribution.Client.Dependency.TopDown.Types
        Distribution.Client.Dependency.Types
        Distribution.Client.Dependency.Modular
        Distribution.Client.Dependency.Modular.Assignment
        Distribution.Client.Dependency.Modular.Builder
        Distribution.Client.Dependency.Modular.Configured
        Distribution.Client.Dependency.Modular.ConfiguredConversion
        Distribution.Client.Dependency.Modular.Dependency
        Distribution.Client.Dependency.Modular.Explore
        Distribution.Client.Dependency.Modular.Flag
        Distribution.Client.Dependency.Modular.Index
        Distribution.Client.Dependency.Modular.IndexConversion
        Distribution.Client.Dependency.Modular.Linking
        Distribution.Client.Dependency.Modular.Log
        Distribution.Client.Dependency.Modular.Message
        Distribution.Client.Dependency.Modular.Package
        Distribution.Client.Dependency.Modular.Preference
        Distribution.Client.Dependency.Modular.PSQ
        Distribution.Client.Dependency.Modular.Solver
        Distribution.Client.Dependency.Modular.Tree
        Distribution.Client.Dependency.Modular.Validate
        Distribution.Client.Dependency.Modular.Version
        Distribution.Client.Exec
        Distribution.Client.Fetch
        Distribution.Client.FetchUtils
        Distribution.Client.Freeze
        Distribution.Client.Get
        Distribution.Client.GZipUtils
        Distribution.Client.Haddock
        Distribution.Client.HttpUtils
        Distribution.Client.IndexUtils
        Distribution.Client.Init
        Distribution.Client.Init.Heuristics
        Distribution.Client.Init.Licenses
        Distribution.Client.Init.Types
        Distribution.Client.Install
        Distribution.Client.InstallPlan
        Distribution.Client.InstallSymlink
        Distribution.Client.JobControl
        Distribution.Client.List
        Distribution.Client.PackageIndex
        Distribution.Client.PackageUtils
        Distribution.Client.ParseUtils
        Distribution.Client.PlanIndex
        Distribution.Client.Run
        Distribution.Client.Sandbox
        Distribution.Client.Sandbox.Index
        Distribution.Client.Sandbox.PackageEnvironment
        Distribution.Client.Sandbox.Timestamp
        Distribution.Client.Sandbox.Types
        Distribution.Client.Setup
        Distribution.Client.SetupWrapper
        Distribution.Client.SrcDist
        Distribution.Client.Tar
        Distribution.Client.Targets
        Distribution.Client.Types
        Distribution.Client.Update
        Distribution.Client.Upload
        Distribution.Client.Utils
        Distribution.Client.Utils.LabeledGraph
        Distribution.Client.World
        Distribution.Client.Win32SelfUpgrade
        Distribution.Client.Compat.ExecutablePath
        Distribution.Client.Compat.FilePerms
        Distribution.Client.Compat.Process
        Distribution.Client.Compat.Semaphore
        Distribution.Client.Compat.Time
        Paths_cabal_install

    -- NOTE: when updating build-depends, don't forget to update version regexps
    -- in bootstrap.sh.
    build-depends:
        array      >= 0.1      && < 0.6,
        base       >= 4.3      && < 5,
        bytestring >= 0.9      && < 1,
        Cabal      >= 1.23     && < 1.24,
        containers >= 0.1      && < 0.6,
        filepath   >= 1.0      && < 1.5,
        HTTP       >= 4000.1.5 && < 4000.3,
        mtl        >= 2.0      && < 3,
        pretty     >= 1        && < 1.2,
        random     >= 1        && < 1.2,
        stm        >= 2.0      && < 3,
        time       >= 1.1      && < 1.6,
        zlib       >= 0.5.3    && < 0.7

    if flag(old-directory)
      build-depends: directory >= 1 && < 1.2, old-time >= 1 && < 1.2,
                     process   >= 1.0.1.1  && < 1.1.0.2
    else
      build-depends: directory >= 1.2 && < 1.3,
                     process   >= 1.1.0.2  && < 1.3

    -- NOTE: you MUST include the network dependency even when network-uri
    -- is pulled in, otherwise the constraint solver doesn't have enough
    -- information
    if flag(network-uri)
      build-depends: network-uri >= 2.6, network >= 2.6
    else
      build-depends: network     >= 2.4 && < 2.6

    if os(windows)
      build-depends: Win32 >= 2 && < 3
      cpp-options: -DWIN32
    else
      build-depends: unix >= 2.0 && < 2.8

    if arch(arm) && impl(ghc < 7.6)
       -- older ghc on arm does not support -threaded
       cc-options:  -DCABAL_NO_THREADED
    else
       ghc-options: -threaded

    c-sources: cbits/getnumcores.c
    default-language: Haskell2010

-- Small, fast running tests.
Test-Suite unit-tests
  type: exitcode-stdio-1.0
  main-is: UnitTests.hs
  hs-source-dirs: tests, .
  ghc-options: -Wall -fwarn-tabs
  other-modules:
    UnitTests.Distribution.Client.Targets
    UnitTests.Distribution.Client.Dependency.Modular.PSQ
    UnitTests.Distribution.Client.Dependency.Modular.Solver
    UnitTests.Distribution.Client.Dependency.Modular.DSL
    UnitTests.Distribution.Client.GZipUtils
    UnitTests.Distribution.Client.Sandbox
    UnitTests.Distribution.Client.UserConfig
  build-depends:
        base,
        array,
        bytestring,
        Cabal,
        containers,
        mtl,
        pretty,
        process,
        directory,
        filepath,
        stm,
        time,
        HTTP,
        zlib,
        random,
        tasty,
        tasty-hunit,
        tasty-quickcheck,
        tagged,
        QuickCheck >= 2.5

  if flag(old-directory)
    build-depends: old-time

  if flag(network-uri)
    build-depends: network-uri >= 2.6, network >= 2.6
  else
    build-depends: network-uri < 2.6, network < 2.6

  if os(windows)
    build-depends: Win32
    cpp-options: -DWIN32
  else
    build-depends: unix

  if arch(arm)
    cc-options:  -DCABAL_NO_THREADED
  else
    ghc-options: -threaded
  default-language: Haskell2010

-- Large, system tests that build packages.
test-suite package-tests
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: PackageTests.hs
  other-modules:
    PackageTests.Exec.Check
    PackageTests.Freeze.Check
    PackageTests.MultipleSource.Check
    PackageTests.PackageTester
  build-depends:
    Cabal,
    QuickCheck >= 2.1.0.1 && < 2.9,
    base,
    bytestring,
    directory,
    extensible-exceptions,
    filepath,
    process,
    regex-posix,
    tasty,
    tasty-hunit,
    tasty-quickcheck

  if os(windows)
    build-depends: Win32 >= 2 && < 3
    cpp-options: -DWIN32
  else
    build-depends: unix >= 2.0 && < 2.8

  if arch(arm)
    cc-options:  -DCABAL_NO_THREADED
  else
    ghc-options: -threaded

  ghc-options: -Wall
  default-language: Haskell2010
